--- a/publicfunction/templates/home/home.html
+++ b/publicfunction/templates/home/home.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
 <p>Home Page</p>
+<p>{{ output }}</p>
 {% endblock %}
 {% block footer %}
     <ul><li>FOOTER</li></ul>
